--- a/SandBox/SandBox/App.xaml
+++ b/SandBox/SandBox/App.xaml
@@ -5,5 +5,10 @@
 	StartupUri="MainWindow.xaml">
 	<Application.Resources>
 		<!-- 应该在此定义应用程序级的资源。-->
+		<ResourceDictionary>
+			<ResourceDictionary.MergedDictionaries>
+				<ResourceDictionary Source="rdict/ButtonStyles.xaml"/>
+			</ResourceDictionary.MergedDictionaries>
+		</ResourceDictionary>
 	</Application.Resources>
 </Application>
