--- a/SandBox/SandBox/MainWindow.xaml
+++ b/SandBox/SandBox/MainWindow.xaml
@@ -6,16 +6,71 @@
 	Title="SandBox"
 	WindowStyle="None"
 	AllowsTransparency="True"
-	Width="800" Height="600"
+	Width="65" Height="25"
 	MouseLeftButtonDown="DragWindow">
 
 	<Grid x:Name="LayoutRoot">
 		<Border x:Name="Window_Border" BorderThickness="0.5" BorderBrush="Gray" Background="White" Height="Auto">
-			<MediaElement HorizontalAlignment="Right" Height="76" Margin="0,109.5,237.5,0" VerticalAlignment="Top" Width="91"/>
+			
 		</Border>
+		
 		<Button x:Name="Button_Close" Width="24"  Height="24" Margin="0,0.5,0.5,0"
 			HorizontalAlignment="Right" VerticalAlignment="Top" BorderThickness="0"
 			Style="{DynamicResource ButtonStyle_Close}" 
-			Click="CloseWindow" />
+			Click="CloseWindow" Background="{x:Null}"
+			/>
+		
+		<Button x:Name="Button_Mute" Width="24"  Height="24" Margin="0,0.5,24.5,0"
+			HorizontalAlignment="Right" VerticalAlignment="Top" BorderThickness="0" Padding="0"
+			MouseEnter="Button_Mute_MouseEnter"
+			MouseLeave="Button_Mute_MouseLeave"
+			Click="Button_Mute_Click" Background="{x:Null}">
+			<Grid>
+				<!-- Normal Look -->
+				<Viewbox Name="Button_Mute_Idle" Visibility="Visible">
+					<Grid Width="48" Height="48" Visibility="Visible">
+						<Grid Visibility="Visible">
+							<Rectangle Fill="#FFFFFFFF" Visibility="Visible" StrokeThickness="0" />
+							<Ellipse Fill="#FFFFFFFF" Visibility="Collapsed" />
+							<Path Data="M50.5,4.7500001C25.232973,4.75 4.75,25.232973 4.7500001,50.5 4.75,75.767029 25.232973,96.25 50.5,96.25 75.767029,96.25 96.25,75.767029 96.25,50.5 96.25,25.232973 75.767029,4.75 50.5,4.7500001z M50.5,0C78.390381,0 101,22.609621 101,50.5 101,78.390381 78.390381,101 50.5,101 22.609621,101 0,78.390381 0,50.5 0,22.609621 22.609621,0 50.5,0z" Stretch="Fill" Fill="#FFFFFFFF" Visibility="Collapsed" />
+						</Grid>
+						<Path Data="M39.549999,16.180009L42.160999,16.180009 42.160999,28.402009 39.549999,28.402009z M45.549999,11.300009L48.160999,11.300009 48.160999,33.300008 45.549999,33.300008z M51.220001,7.6800084L53.831001,7.6800084 53.831001,36.846009 51.220001,36.846009z M31.99904,0L31.99904,21.940938 31.99904,43.881997 16.549597,32.911531 14.667,31.57385 14.667,31.612008 0,31.612008 0,12.390009 14.551773,12.390009 16.549597,10.970469z" Stretch="Uniform" Fill="#FF999999" Width="26" Height="26" Margin="0,0,0,0" />
+
+						<!-- Forbid -->
+						<Path Name="Button_Mute_Forbid_Idle" Visibility="Hidden" Stretch="Uniform" Fill="#FF999999" Width="26" Height="26" Margin="0,0,0,0">
+							<Path.Data>
+								<PathGeometry FillRule="Nonzero" Figures="M2.57812547683716,25.3579177856445L14.53125,25.3579177856445 67.96875,102.186042785645 56.625,102.186042785645 2.57812547683716,25.3579177856445z" />
+							</Path.Data>
+						</Path>
+					</Grid>
+				</Viewbox>
+
+				<!-- Clicked Look -->
+				<Viewbox Name="Button_Mute_Clicked" Visibility="Hidden">
+					<Grid Width="48" Height="48" Visibility="Visible">
+						<Grid Visibility="Visible">
+							<Rectangle Fill="#FFDDDDDD" Visibility="Visible" />
+							<Ellipse Fill="#FFDDDDDD" Visibility="Collapsed" />
+							<Path Data="M50.5,4.7500001C25.232973,4.75 4.75,25.232973 4.7500001,50.5 4.75,75.767029 25.232973,96.25 50.5,96.25 75.767029,96.25 96.25,75.767029 96.25,50.5 96.25,25.232973 75.767029,4.75 50.5,4.7500001z M50.5,0C78.390381,0 101,22.609621 101,50.5 101,78.390381 78.390381,101 50.5,101 22.609621,101 0,78.390381 0,50.5 0,22.609621 22.609621,0 50.5,0z" Stretch="Fill" Fill="#FFFFFFFF" Visibility="Collapsed" />
+						</Grid>
+						<Path Data="M39.549999,16.180009L42.160999,16.180009 42.160999,28.402009 39.549999,28.402009z M45.549999,11.300009L48.160999,11.300009 48.160999,33.300008 45.549999,33.300008z M51.220001,7.6800084L53.831001,7.6800084 53.831001,36.846009 51.220001,36.846009z M31.99904,0L31.99904,21.940938 31.99904,43.881997 16.549597,32.911531 14.667,31.57385 14.667,31.612008 0,31.612008 0,12.390009 14.551773,12.390009 16.549597,10.970469z" Stretch="Uniform" Fill="#FF666666" Width="26" Height="26" Margin="0,0,0,0" />
+
+						<!-- Forbid -->
+						<Path Name="Button_Mute_Forbid_Clicked" Visibility="Hidden" Stretch="Uniform" Fill="#FF666666" Width="26" Height="26" Margin="0,0,0,0">
+							<Path.Data>
+								<PathGeometry FillRule="Nonzero" Figures="M2.57812547683716,25.3579177856445L14.53125,25.3579177856445 67.96875,102.186042785645 56.625,102.186042785645 2.57812547683716,25.3579177856445z" />
+							</Path.Data>
+						</Path>
+					</Grid>
+				</Viewbox>
+			</Grid>
+		</Button>
+
+		<MediaElement x:Name="BgmPlayer" Visibility="Hidden" Volume="0.382"
+			LoadedBehavior="Manual" UnloadedBehavior="Stop"
+			Initialized="BgmInitialize"
+			MediaEnded="BgmChange"
+			/>
+		
 	</Grid>
 </Window>
